<resources>
    <string name="app_name">ApSche</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
<<<<<<< HEAD
=======
    <string name="intial_screen_text">All about your Apartment</string>
    <string name="helloText">Hello</string>
    <string name="welcomeText">Welcome !!</string>
    <string name="createAccountText">Create an account</string>
    <string name="accountExists">Already have an account? </string>
    <string name="noAccountExists">Don\'t have an Account?</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPassword">Enter password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="aptno">Enter Appartment Number</string>
    <string name="tenant_name">Enter Tenant Name</string>
    <string name="phone_no">Enter Phone Number</string>
    <string name="lease_amount">Enter Lease Amount</string>
    <string name="lease_period">Enter Lease Period</string>
    <string name="beds">Enter Beds Count</string>
    <string name="add_details">Add Details</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
>>>>>>> view_details

    <string name="initial_screen_text">All about your Apartment</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="no_account_exists">Don\'t have an account?</string>
    <string name="welcome_back_text">Welcome Back to ApSche</string>
    <string name="login_text">Login to your account</string>
    <string name="welcome">Welcome to ApSche</string>
    <string name="create_account">Create an account</string>
    <string name="already_account">Already have an account?</string>
>>>>>>> Stashed changes
</resources>