<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
<<<<<<< Updated upstream:app/src/main/res/layout/fragment_intial.xml
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="intialfragment" />
=======
        android:id="@+id/initialApSche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/initialApScheDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_screen_text"
        app:layout_constraintBottom_toTopOf="@+id/secondGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainGuideline" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondGuideline">

        <Button
            android:id="@+id/initialSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/theme_color"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/initialSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/theme_color"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>


>>>>>>> Stashed changes:app/src/main/res/layout/fragment_initial.xml

</FrameLayout>