<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_margin="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/aptno"
                        android:textSize="24sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Aptno"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:lines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tenant_name"
                        android:textSize="24sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tenant_name"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:lines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone_no"
                        android:textSize="24sp" />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_no"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:lines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lease_amount"
                        android:textSize="24sp" />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lease_amount"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:lines="1" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lease_period"
                        android:textSize="24sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lease_period"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:lines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/beds"
                        android:textSize="24sp" />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/beds"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:lines="1" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:backgroundTint="@color/theme_color"
                android:text="@string/edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>